--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
         tools:context="me.ilich.vel.computer.ComputerActivity">
 
         <LinearLayout
@@ -31,34 +30,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@android:color/white"
                 android:textSize="36sp"
                 tools:text="12:34" />
 
-            <TextView
-                android:id="@+id/speed_value"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="142sp"
-                tools:text="123" />
+                android:layout_height="150dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/speed_unit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="42sp"
-                tools:text="123" />
+                <TextView
+                    android:id="@+id/speed_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textAlignment="center"
+                    android:textSize="142sp"
+                    tools:text="60" />
+
+                <TextView
+                    android:id="@+id/speed_unit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/speed_value"
+                    android:layout_toEndOf="@id/speed_value"
+                    android:layout_toRightOf="@id/speed_value"
+                    android:textAlignment="center"
+                    android:textSize="36sp"
+                    tools:text="km/h" />
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/acceleration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@android:color/white"
                 android:textSize="14sp"
                 tools:text="123" />
 
@@ -66,47 +72,51 @@
                 android:id="@+id/error"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Для работы приложения необходимы разрешения"
-                android:textColor="@android:color/white"
+                android:text="@string/computer_error_need_permissions"
                 android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/state_ascent"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="подъём"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:visibility="invisible" />
+                android:layout_height="140dp">
 
-            <TextView
-                android:id="@+id/angel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="42sp"
-                tools:text="+90 0" />
+                <TextView
+                    android:id="@+id/angel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textSize="42sp"
+                    tools:text="90" />
 
-            <TextView
-                android:id="@+id/angel_unit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="42sp"
-                tools:text="%" />
+                <TextView
+                    android:id="@+id/angel_unit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/angel"
+                    android:layout_toEndOf="@id/angel"
+                    android:layout_toRightOf="@id/angel"
+                    android:textAlignment="center"
+                    android:textSize="24sp"
+                    tools:text="%" />
 
-            <TextView
-                android:id="@+id/state_descent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="спуск"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:visibility="invisible" />
+                <TextView
+                    android:id="@+id/state_ascent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@id/angel"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/computer_angel_state_ascent"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/state_descent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/angel"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/computer_angel_state_descend"
+                    android:textSize="14sp" />
+
+            </RelativeLayout>
 
         </LinearLayout>
 
