--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,62 +7,20 @@
     tools:context=".settings.SettingsActivity">
 
     <FrameLayout
+        android:id="@+id/container_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
+
+        <include layout="@layout/layout_toolbar" />
+
+    </FrameLayout>
+
+    <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/container_toolbar" />
 
-    <!--    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Speed unit"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
-
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:id="@+id/speed_unit_kilometers_per_hour"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/speed_unit_kilometers_per_hour" />
-
-            <RadioButton
-                android:id="@+id/speed_unit_meters_per_second"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/speed_unit_meters_per_second" />
-
-            <RadioButton
-                android:id="@+id/speed_unit_miles_per_hour"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/speed_unit_miles_per_hour" />
-
-        </RadioGroup>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pitch unit"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
-
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:id="@+id/pitch_unit_degree"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/pitch_unit_degree" />
-
-            <RadioButton
-                android:id="@+id/pitch_unit_percent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/pitch_unit_percent" />
-
-        </RadioGroup>-->
-
-</LinearLayout>
+</RelativeLayout>
