--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,120 +7,37 @@
     android:layout_height="match_parent"
     tools:context=".computer.ComputerActivity">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="me.ilich.vel.computer.ComputerActivity">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25">
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25">
+            android:textAlignment="center"
+            android:textSize="36sp"
+            tools:text="12:34" />
 
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="36sp"
-                tools:text="12:34" />
+        <include layout="@layout/layout_speed" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:orientation="horizontal">
+        <TextView
+            android:id="@+id/error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/computer_error_need_permissions"
+            android:visibility="gone" />
 
-                <TextView
-                    android:id="@+id/speed_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:textAlignment="center"
-                    android:textSize="142sp"
-                    tools:text="60" />
+        <include layout="@layout/layout_angel" />
 
-                <TextView
-                    android:id="@+id/speed_unit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/speed_value"
-                    android:layout_toEndOf="@id/speed_value"
-                    android:layout_toRightOf="@id/speed_value"
-                    android:textAlignment="center"
-                    android:textSize="36sp"
-                    tools:text="km/h" />
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/acceleration"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="14sp"
-                tools:text="123" />
-
-            <TextView
-                android:id="@+id/error"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/computer_error_need_permissions"
-                android:visibility="gone" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="140dp">
-
-                <TextView
-                    android:id="@+id/angel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:textSize="42sp"
-                    tools:text="90" />
-
-                <TextView
-                    android:id="@+id/angel_unit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/angel"
-                    android:layout_toEndOf="@id/angel"
-                    android:layout_toRightOf="@id/angel"
-                    android:textAlignment="center"
-                    android:textSize="24sp"
-                    tools:text="%" />
-
-                <TextView
-                    android:id="@+id/state_ascent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@id/angel"
-                    android:layout_centerHorizontal="true"
-                    android:text="@string/computer_angel_state_ascent"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/state_descent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/angel"
-                    android:layout_centerHorizontal="true"
-                    android:text="@string/computer_angel_state_descend"
-                    android:textSize="14sp" />
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation"
