--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -2,6 +2,14 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
+        android:defaultValue="@string/preference_theme_value_default"
+        android:entries="@array/preference_theme_entries"
+        android:entryValues="@array/preference_theme_values"
+        android:key="@string/preference_theme_key"
+        android:summary="%s"
+        android:title="@string/preference_theme_title" />
+
+    <ListPreference
         android:defaultValue="@string/preference_speed_default"
         android:entries="@array/preference_speed_entries"
         android:entryValues="@array/preference_speed_values"
