--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,45 +5,87 @@
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".computer.ComputerActivity">
+    tools:context=".computer.ComputerActivity"
+    tools:theme="@style/AppTheme">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25">
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/gps_status"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/ic_location_on" />
 
         <TextView
             android:id="@+id/time"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:textAlignment="center"
             android:textSize="36sp"
             tools:text="12:34" />
 
-        <include layout="@layout/layout_speed" />
+        <ImageView
+            android:id="@+id/battery_status"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/ic_battery_50" />
 
         <TextView
-            android:id="@+id/error"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/computer_error_need_permissions"
-            android:visibility="gone" />
-
-        <include layout="@layout/layout_angel" />
-
-        <TextView
-            android:id="@+id/gps_status"
+            android:id="@+id/speed_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NO GPS" />
+            android:layout_centerInParent="true"
+            android:textAlignment="center"
+            android:textSize="142sp"
+            tools:text="23.5" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/speed_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/speed_value"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="-24dp"
+            android:gravity="center"
+            android:textSize="30sp"
+            tools:text="km/h" />
+
+        <TextView
+            android:id="@+id/speed_max"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/speed_value"
+            android:layout_alignStart="@id/speed_value"
+            android:layout_below="@id/speed_value"
+            android:layout_marginTop="-26dp"
+            android:gravity="start"
+            android:textSize="21sp"
+            tools:text="MAX\n99.9" />
+
+        <TextView
+            android:id="@+id/speed_avg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/speed_value"
+            android:layout_alignRight="@id/speed_value"
+            android:layout_below="@id/speed_value"
+            android:layout_marginTop="-26dp"
+            android:gravity="end"
+            android:textSize="21sp"
+            tools:text="AVG\n23.4" />
+
+    </RelativeLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation"
