--- a/app/src/main/res/menu/computer.xml
+++ b/app/src/main/res/menu/computer.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/menu_settings"
-        android:icon="@android:drawable/ic_menu_manage"
+        android:icon="@drawable/ic_settings"
         android:title="@string/menu_settings" />
 
     <item
         android:id="@+id/menu_about"
-        android:icon="@android:drawable/ic_menu_help"
+        android:icon="@drawable/ic_help"
         android:title="@string/menu_about" />
 
 </menu>
