--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,15 @@
 <resources>
 
-    <color name="primary">#2ac92a</color>
-    <color name="primary_dark">#155b17</color>
-    <color name="accent">#ed093b</color>
-    <color name="window_background">#afeca5</color>
-    <color name="text">#225819</color>
+    <color name="primary">#a0a0a0</color>
+    <color name="primary_dark">#555</color>
+    <color name="accent">#000</color>
+    <color name="window_background">#fff</color>
+    <color name="text">#111</color>
     <color name="warning">#fc3a18</color>
     <dimen name="icon_size">36dp</dimen>
     <dimen name="time_size">36sp</dimen>
 
+    <attr name="velColorNavbar" format="color" />
     <attr name="velColorNormal" format="color" />
     <attr name="velColorBackground" format="color" />
     <attr name="velIconSize" format="dimension" />
@@ -21,6 +22,7 @@
         <item name="colorAccent">@color/accent</item>
         <item name="android:windowBackground">?attr/velColorBackground</item>
         <item name="android:textColor">?attr/velColorNormal</item>
+<!--        <item name="velColorNavbar">#f0f</item>-->
         <item name="velColorNormal">@color/text</item>
         <item name="velColorBackground">@color/window_background</item>
         <item name="velColorWarning">@color/warning</item>
