--- a/app/src/main/res/values/theme_eggplant.xml
+++ b/app/src/main/res/values/theme_eggplant.xml
@@ -8,11 +8,14 @@
     <color name="theme_eggplant_primary">#673ab7</color>
     <color name="theme_eggplant_primary_dark">#512da8</color>
     <color name="theme_eggplant_accent">#ff5177</color>
+    <color name="theme_eggplant_background">#e2d5fa</color>
 
     <style name="AppTheme.Eggplant" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/theme_eggplant_primary</item>
         <item name="colorPrimaryDark">@color/theme_eggplant_primary_dark</item>
         <item name="colorAccent">@color/theme_eggplant_accent</item>
+        <item name="velColorBackground">@color/theme_eggplant_background</item>
+        <item name="velColorNormal">@color/theme_eggplant_primary</item>
     </style>
 
 </resources>
