--- a/app/src/main/res/values/theme_forest.xml
+++ b/app/src/main/res/values/theme_forest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="theme_forest_id" translatable="false">FOREST</string>
 
@@ -8,11 +8,15 @@
     <color name="theme_forest_primary">#259b24</color>
     <color name="theme_forest_primary_dark">#0a7e07</color>
     <color name="theme_forest_accent">#5af158</color>
+    <color name="theme_forest_background">#e4ffe3</color>
 
     <style name="AppTheme.Forest" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/theme_forest_primary</item>
         <item name="colorPrimaryDark">@color/theme_forest_primary_dark</item>
         <item name="colorAccent">@color/theme_forest_accent</item>
+        <item name="velColorNavbar">@color/theme_forest_primary_dark</item>
+        <item name="velColorBackground">@color/theme_forest_background</item>
+        <item name="velColorNormal">@color/theme_forest_primary</item>
     </style>
 
 </resources>
