--- a/app/src/main/res/values/theme_sea.xml
+++ b/app/src/main/res/values/theme_sea.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="theme_sea_id" translatable="false">SEA</string>
 
@@ -8,11 +8,15 @@
     <color name="theme_sea_primary">#00bcd4</color>
     <color name="theme_sea_primary_dark">#0097a7</color>
     <color name="theme_sea_accent">#6889ff</color>
+    <color name="theme_sea_background">#c2f8ff</color>
 
     <style name="AppTheme.Sea" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/theme_sea_primary</item>
         <item name="colorPrimaryDark">@color/theme_sea_primary_dark</item>
         <item name="colorAccent">@color/theme_sea_accent</item>
+        <item name="velColorNavbar">@color/theme_sea_primary_dark</item>
+        <item name="velColorBackground">@color/theme_sea_background</item>
+        <item name="velColorNormal">@color/theme_sea_primary</item>
     </style>
 
 </resources>
