--- a/app/src/main/res/layout/layout_angel.xml
+++ b/app/src/main/res/layout/layout_angel.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="140dp"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_computer">
 
     <TextView
         android:id="@+id/angel"
