--- a/app/src/main/res/values/theme_forest.xml
+++ b/app/src/main/res/values/theme_forest.xml
@@ -3,17 +3,24 @@
 
     <string name="theme_forest_id" translatable="false">FOREST</string>
 
-    <string name="theme_forest_title">Wood</string>
+    <string name="theme_forest_title">Forest</string>
 
     <color name="theme_forest_primary">#259b24</color>
     <color name="theme_forest_primary_dark">#0a7e07</color>
     <color name="theme_forest_accent">#5af158</color>
     <color name="theme_forest_background">#e4ffe3</color>
+    <color name="theme_forest_normal">#259b24</color>
 
     <style name="AppTheme.Forest" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/theme_forest_primary</item>
         <item name="colorPrimaryDark">@color/theme_forest_primary_dark</item>
         <item name="colorAccent">@color/theme_forest_accent</item>
+        <item name="velColorNormal">@color/theme_forest_normal</item>
+        <item name="velColorBackground">@color/theme_forest_background</item>
+        <item name="velColorLevelGray">@color/level_gray</item>
+        <item name="velColorLevelGreen">@color/theme_forest_normal</item>
+        <item name="velColorLevelYellow">@color/theme_forest_accent</item>
+        <item name="velColorLevelRed">@color/level_red</item>
     </style>
 
 </resources>
